# ADMIS-Action-Guard

./: .gitignore  LICENSE  PACKAGE_MANIFEST.md  README.md  pyproject.toml
admis/: __init__.py  cli.py  client.py  decision.py  guards.py  policy.py  receipts.py
admis/integrations/: __init__.py  crewai.py  langchain.py  langgraph.py  mcp.py
docs/: OUTCOME_MODEL.md  WRAPPER_REFACTOR_SPEC.md
examples/: 01_guard_tool_data_exfiltration.py  02_guard_tool_admin_impersonation.py  03_guard_agent_multi_signal_threat.py  04_guard_tool_untrusted_agent.py  05_guard_agent_autonomous_finance.py
policies/: demo_default.yml  demo_finance.yml  demo_healthcare.yml  demo_strict.yml
tests/: test_preview_sdk.py
